# sibadi-bot

./: .env-template  .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: deploy.yml  python-app.yml
src/: abstractions.py  actions.py  bot.py  config.py  formaters.py  main.py  models.py  parser.py  repo.py  suggestions.py
src/institutions/: __init__.py  types.py
src/institutions/sibadi/: __init__.py  _parser.py  actions.py  sibadi.py  student.py
src/telegram/: actions.py  bot.py  common.py  constants.py  getters.py  keyboards.py  logic.py  menu.py  registration.py  states.py  time_utils.py  windows.py
src/telegram/registration/: registration.py  sibadi_registration.py
tests/: test_actions.py
